--- a/src/app/_styles/globals.css
+++ b/src/app/_styles/globals.css
@@ -11,26 +11,19 @@
 
     :root {
         --bg-color: #ffffff;
-        --text-color: #222222;
-        --theme-text-color: #3a7bd5;
+        --inverse-color-1: #222222;
+
+        --theme-color: #3a7bd5;
     }
 
     .dark {
         --bg-color: #060606;
-        --text-color: #f5f6f7;
+        --inverse-color-1: #f5f6f7;
     }
 }
 
 @layer utilities {
     .bg-color {
         background-color: var(--bg-color);
-    }
-
-    .text-color {
-        color: var(--text-color);
-    }
-
-    .theme-text-color {
-        color: var(--theme-text-color);
     }
 }
