--- a/src/app/_styles/globals.css
+++ b/src/app/_styles/globals.css
@@ -7,12 +7,12 @@
     body,
     #root {
         height: 100%;
-        @apply bg-color;
     }
 
     :root {
         @apply font-['Pretendard'];
         @apply text-inverse-1;
+        @apply bg-[var(--bg-color)];
 
         --bg-color: #ffffff;
         --inverse-color-1: #222222;
@@ -89,11 +89,5 @@
 
     p {
         @apply text-inverse-1;
-    }
-}
-
-@layer utilities {
-    .bg-color {
-        background-color: var(--bg-color);
     }
 }
