--- a/src/app/_styles/globals.css
+++ b/src/app/_styles/globals.css
@@ -12,8 +12,8 @@
     :root {
         @apply font-['Pretendard'];
         @apply text-inverse-1;
-        @apply transition-colors;
-        @apply duration-700;
+        /* @apply transition-colors;
+        @apply duration-700; */
 
         --bg-color: #ffffff;
         --inverse-color-1: #424242;
@@ -91,11 +91,5 @@
     p {
         @apply text-inverse-1;
         @apply text-pretty;
-    }
-}
-
-@layer utilities {
-    .bg-body {
-        background-color: var(--bg-color);
     }
 }
