feat: 자기소개서 섹션 추가, 이력서 스타일 일부 수정
자소서 섹션 추가,
a태그 underbar offset 변경,
먹짐마 프로젝트 What I did 한 줄 더 추가

--- a/src/app/_styles/globals.css
+++ b/src/app/_styles/globals.css
@@ -74,14 +74,16 @@
     a {
         @apply font-light;
         @apply underline;
-        @apply underline-offset-1;
-        @apply decoration-inverse-3;
+        @apply underline-offset-2;
+        @apply decoration-[0.04rem];
+        @apply decoration-gray-400;
         @apply dark:decoration-gray-500;
         @apply hover:decoration-[var(--theme-color)];
         @apply dark:hover:decoration-orange-300;
 
         @apply text-inverse-1;
-        @apply dark:text-gray-400;
+        @apply text-gray-600/85;
+        @apply dark:text-gray-200/90;
 
         @apply transition-colors;
         @apply duration-500;
